--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/vj.webp" type="image/x-icon" />
+    <link rel="icon" href="assets/images/gv.png" type="image/x-icon" />
 
     <!-- Google Fonts: Rubik -->
     <link
